# libs/backend/magex-connector/openapi-spec.yml
@@ -4,6 +4,7 @@ info:
   version: 1.0.0
 servers:
   - url: http://{{baseurl}}
+  - url: https://devapi.point24h.com
 components:
   securitySchemes:
     noauthAuth:
@@ -20,6 +21,7 @@ tags:
   - name: Users
   - name: Stocking
   - name: Brands
+  - name: Promotions
 paths:
   /users/login:
     post:
@@ -1300,6 +1302,122 @@ paths:
           schema:
             type: string
           example: '{{accessToken}}'
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json: {}
+  /api/promos/{accountName}:
+    get:
+      tags:
+        - Promotions
+      summary: List
+      parameters:
+        - name: accountName
+          in: path
+          schema:
+            type: string
+          required: true
+          example: tryvnd@point24h.com
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json: {}
+  /api/promos/create:
+    post:
+      tags:
+        - Promotions
+      summary: Create
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              example:
+                code: ''
+                department: ''
+                title: test2
+                startDate: '2024-10-28T00:00:00.000Z'
+                endDate: '2025-06-27T23:59:00.000Z'
+                startTime: '2024-10-28T18:00:00.000Z'
+                endTime: '2024-10-28T22:00:00.000Z'
+                machine: 657ab833c7201f469894300d
+                percentage: false
+                promoType: general
+                product:
+                  - 66ef06d3137e171d9897c650
+                  - 670c8d40853afd0a602b62fd
+                amount: 4
+                referTo: tryvnd@point24h.com
+                active: true
+                isGroup: false
+                productsToBuy: 0
+                cateOrProd: prod
+                emailCode: []
+                oneTimeCode: []
+                isOne: false
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json: {}
+  /api/promos/{_id}:
+    delete:
+      tags:
+        - Promotions
+      summary: Delete
+      parameters:
+        - name: _id
+          in: path
+          schema:
+            type: string
+          required: true
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json: {}
+  /api/promos/update/{_id}:
+    patch:
+      tags:
+        - Promotions
+      summary: Edit
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              example:
+                oldCode: ''
+                code: ''
+                department: ''
+                title: test23
+                startDate: '2024-10-28T00:00:00.000Z'
+                endDate: '2025-06-27T23:59:00.000Z'
+                startTime: '2024-10-28T18:00:00.000Z'
+                endTime: '2024-10-28T22:00:00.000Z'
+                machine: 657ab833c7201f469894300d
+                percentage: false
+                promoType: general
+                product:
+                  - 66ef06d3137e171d9897c650
+                  - 670c8d40853afd0a602b62fd
+                amount: 4
+                referTo: tryvnd@point24h.com
+                active: true
+                isGroup: false
+                productsToBuy: 0
+                cateOrProd: prod
+                emailCode: []
+                oneTimeCode: []
+                isOne: false
+      parameters:
+        - name: _id
+          in: path
+          schema:
+            type: string
+          required: true
       responses:
         '200':
           description: Successful response
